# wayfinder

./: .contextcore.yaml  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.owl.yaml  docker-compose.yaml  pyproject.toml  setup.ps1  squirrel-tasks.yaml
.github/workflows/: ci.yml
alertmanager/: alertmanager.yaml
contextcore-mole/: .gitignore  README.md  pyproject.toml
contextcore-mole/src/contextcore_mole/: cli.py  models.py
contextcore-mole/tests/: __init__.py
contextcore-owl/: CLAUDE.md  README.md
contextcore-owl/docs/: DEVELOPMENT.md
contextcore-rabbit/: .gitignore  pyproject.toml
contextcore-rabbit/tests/: conftest.py  test_action.py  test_actions_builtin.py  test_alert.py  test_server.py
contextcore-skills/: CHANGELOG.md  LICENSE
contextcore-skills/docs/: loading-skills.md  squirrel-knowledge-emission.md
contextcore-skills/schemas/: lesson-learned-schema.yaml  squirrel-knowledge-schema.yaml
contextcore-skills/scripts/: lessons_learned_parser.py  squirrel_emit_all.py  squirrel_knowledge_emitter.py
contextcore-skills/skills/capability-value-promoter/: CLAUDE.md  SKILL.md  sync-to-installed.sh
contextcore-skills/skills/dev-tour-guide/: README.md  SKILL.md  insights.md
deploy/: README.md
deploy/kind/: kind-dev.yaml.tmpl  kind-test.yaml.tmpl  namespaces.yaml
deploy/kind/scripts/: create-cluster.sh
docs/: A2A_TRUNCATION_PREVENTION.md  DEPENDENCY_MANIFEST_PATTERN.md  EXPANSION_PACKS.md  INSTALLATION.md  INSTALLATION_TRACKING_PLAN.md  KNOWN_ISSUES.md  OPERATIONAL_RUNBOOK.md  OTEL_GENAI_GAP_ANALYSIS.md  OTEL_GENAI_MIGRATION_GUIDE.md  REINSTALL_GUIDE.md  STANDARDS_ALIGNMENT.md  UV_WORKSPACE_PLAN.md  WORKFLOW_USAGE_GUIDE.md  blueprint-implementation-guide.md  blueprint-integration-existing.md  blueprint-new-categories.md  blueprint-reference-architecture.md  blueprint-reusable-patterns.md  blueprint-validation-framework.md  customization.md  getting-started.html  harbor-tour-solopreneur.md  harbor-tour.md  lessons-learned-emission.md  loading-skills.md  migration-guides.md  skill-semantic-conventions.md
docs/adr/: 003-monorepo-separation.md  README.md
docs/capability-index/: CONTEXTCORE_ROADMAP_PROMPT.md  PAIN_POINTS_GUIDE.md  ROI_ESTIMATION_ENGINE.md  SESSION_2026-01-28_AOS_ROADMAP.md  SESSION_2026-01-29_STARTD8_BENEFITS.md  SESSION_2026-01-30_PAIN_POINTS.md  WAYFINDER_ROADMAP_PROMPT.md  contextcore.agent.md  contextcore.agent.yaml  contextcore.pain_points.yaml  contextcore.user.yaml  pain-points-harbor-tour.html  wayfinder.agent.html  wayfinder.agent.md  wayfinder.agent.yaml  wayfinder.benefits.yaml  wayfinder.pain_points.yaml  wayfinder.user.yaml
docs/dashboards/: INSTALLATION.md
docs/plans/: PRIME_CONTRACTOR_GIT_SAFETY.md
docs/session-logs/: 2026-01-26_tempo-task-loading-debugging.md
docs/value-propositions/: VALUE_PROPOSITION_GRAFANA_OTEL.md
examples/: sample-skill-emission.py  sample-value-proposition.yaml
grafana/provisioning/dashboards/: dashboards.yaml  dependencies.yaml
k8s/observability/: configs.yaml  deployments.yaml  rabbit.yaml
k8s/observability/dashboards/: portfolio.json
loki/: loki.yaml
loki/rules/fake/: contextcore-alerts.yaml  contextcore-rules.yaml
mimir/: mimir.yaml
mimir/rules/contextcore/: alerts.yaml  rules.yaml
plans/: KUBERNETES_MIXIN_REMAINING.md
scripts/: TUI_SCRIPT_FIXES.md  generate-install-guide.py  lessons_learned_emitter.py  run_lead_contractor.py  run_lead_contractor_phase3.py  run_lead_contractor_tui.py  squirrel_emit_all.py  squirrel_knowledge_emitter.py  squirrel_knowledge_parser.py
scripts/lead_contractor/: ast_merge.py  integrate_backlog.py  merge_conflicts.py  run_install_tracking.py
scripts/lead_contractor/tasks/: graph.py  install_tracking.py
skills/capability-value-promoter/references/: capability-value-schema.yaml  channel-templates.md  personas.md
skills/capability-value-promoter/scripts/: extract_capabilities.py
skills/dev-tour-guide/: CLAUDE.md  MANIFEST.yaml  SKILL.md  insights.md  next-steps.md
skills/dev-tour-guide/prompts/: index-review.md  review-for-index.md
skills/dev-tour-guide/references/: skills-catalog.md
skills/dev-tour-guide/scripts/: grafana-alert-rules.yaml
src/contextcore/: __init__.py  cli_legacy.py  operator.py  propagation.py  sampler_factory.py  state.py  tracker.py
src/contextcore/agent/: a2a_adapter.py  a2a_messagehandler.py  a2a_server.py  (+3 more)
src/contextcore_mole/: __init__.py  cli.py  parser.py  traceql.py
tempo/: tempo.yaml
tests/: conftest.py  test_ast_merge.py  test_parser.py  test_rbac.py
wayfinder-fox/: README.md  pyproject.toml
wayfinder-fox/src/wayfinder_fox/: __init__.py  config.py  demo.py  enricher.py  kubernetes.py  router.py  telemetry.py
wayfinder-fox/src/wayfinder_fox/actions/: __init__.py  claude_analysis.py  context_notify.py  fox_enrich.py
wayfinder-fox/tests/: conftest.py  test_enricher.py  test_fox_enrich.py  test_router.py  test_telemetry.py
wayfinder-mixin/: Makefile  config.libsonnet  mixin.libsonnet
wayfinder-mixin/alerts/: contextcore.libsonnet  fox.libsonnet
wayfinder-mixin/lib/: alerts.libsonnet  panels.libsonnet  variables.libsonnet
wayfinder-mixin/rules/: loki.libsonnet  mimir.libsonnet
wayfinder-mixin/services/: alerts.libsonnet  dashboard.libsonnet  loki_rules.libsonnet  notification.libsonnet  service_config.libsonnet  slo.libsonnet
wayfinder-mixin/tests/: smoke_test.jsonnet
(+102 files in other folders)
