[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextcore-mole"
version = "0.1.0"
description = "CLI tool to recover tasks from ContextCore Tempo trace exports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Neil Yashinsky" }
]
keywords = ["contextcore", "opentelemetry", "tempo", "task-recovery", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
mole = "contextcore_mole.cli:main"

[project.urls]
Homepage = "https://github.com/Force-Multiplier-Labs/wayfinder"
Repository = "https://github.com/Force-Multiplier-Labs/wayfinder"

[tool.hatch.build.targets.wheel]
packages = ["src/contextcore_mole"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
